Bug #24873
'radosgw-admin sync error trim' only trims partially
% Done:
0%
Source:
Tags:
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
The admin command calls RGWRados::time_log_trim() on each shard, but does not loop until the osd responds with ENODATA. This means that it will trim at most 1000 entries per shard.
Related issues
History
#1 Updated by Casey Bodley over 4 years ago
- Status changed from New to Fix Under Review
#2 Updated by Casey Bodley over 4 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #24983: luminous: 'radosgw-admin sync error trim' only trims partially added
#4 Updated by Nathan Cutler over 4 years ago
- Copied to Backport #24984: mimic: 'radosgw-admin sync error trim' only trims partially added
#5 Updated by Nathan Cutler over 4 years ago
- Status changed from Pending Backport to Resolved