radosgw-admin: 'sync error trim' loops until complete

a single call to time_log_trim() will trim a maximum of 1000 entries.
now loops until a return code of -ENODATA indicates that all entries
in the given range were trimmed

an optional --trim-delay-ms option can be used to limit the frequency
of osd ops

Fixes: http://tracker.ceph.com/issues/24873

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 326971931d15250ed26d9213ad14e76e4ef402bc)

Conflicts:
	src/rgw/rgw_admin.cc
- some control commands not backported from master
- added #include <thread> for std::this_thread and #include <chrono> for
  std::chrono::milliseconds (in master and mimic, rgw_admin.cc must be getting
  these includes via some other header)